Fixed the z-index issue

--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ body {
   display: flex;
   font-family: "Barlow", sans-serif;
   color: rgb(218, 215, 215);
-  /* position: relative; */
+  position: relative;
 }
 .tagline {
   margin-left: 40px;
@@ -63,7 +63,7 @@ body {
 .tagline h4 {
   margin-top: 20px;
 }
-.heroButton {
+#heroButton {
   margin: 60px 0px 0px 80px;
 }
 .curledArrow {
@@ -73,13 +73,13 @@ body {
 }
 .heroImages {
   position: relative;
+  /* z-index: 0; */
 }
 .profileImage {
   width: 700px;
   height: 700px;
-  /* margin-top: 40px; */
-  /* border-radius: 50%; */
   object-fit: cover;
+  /* z-index: 1; */
   /* position: relative; */
   
 }
@@ -89,56 +89,17 @@ body {
   right: -64px;
   z-index: -1;
 }
-
-/* .circle {
-  width: 600px;
-  height: 600px;
-  border: 0.5px solid gray;
-  border-left: transparent;
-  border-radius: 50%;
-  position: absolute;
-  top: 80px;
-  right: -140px;
-  z-index: -1;
-}
-.circle1 {
-  width: 500px;
-  height: 500px;
-  border: solid gray;
-  border-left: transparent;
-  border-radius: 50%;
-  position: absolute;
-  top: 128px;
-  right: -80px;
-  z-index: -1;
-}
-.circle2 {
-  width: 400px;
-  height: 400px;
-  border: 1px solid gray;
-  border-left: transparent;
-  border-radius: 50%;
-  position: absolute;
-  top: 180px;
-  right: -36px;
-  z-index: -1;
-} */
-
 /* Styling for the icons in the hero section */
-/* .icons {
-  position: relative;
-  background-color: red;
+/* #heroIcons {
+  z-index: 2;
 } */
 .behance {
   position: absolute;
   top: 76px;
   right: 120px;
-  z-index: 1000;
+  z-index: 1;
   border-radius: 50%;
-}
-.behance:hover {
-  scale: 1.2;
-  background-color: azure;
+  background-color: rgb(1, 1, 22);
 }
 .dribble {
   position: absolute;
@@ -146,10 +107,7 @@ body {
   right: 8px;
   z-index: 1;
   border-radius: 50%;
-}
-.dribble:hover {
-  scale: 1.2;
-  background-color: azure;
+  background-color: rgb(1, 1, 22);
 }
 .github {
   position: absolute;
@@ -157,10 +115,7 @@ body {
   right: -40px;
   z-index: 11;
   border-radius: 50%;
-}
-.github:hover {
-  scale: 1.2;
-  background-color: azure;
+  background-color: rgb(1, 1, 22);
 }
 .linkedin {
   position: absolute;
@@ -168,8 +123,9 @@ body {
   right: -12px;
   z-index: 11;
   border-radius: 50%;
+  background-color: rgb(1, 1, 22);
 }
-.linkedin:hover {
+.behance:hover, .dribble:hover, .github:hover, .linkedin:hover {
   scale: 1.2;
   background-color: azure;
 }
